--- a/Job Portal System/Pages/Shared/_NotificationPartial.cshtml
+++ b/Job Portal System/Pages/Shared/_NotificationPartial.cshtml
@@ -1,83 +1,10 @@
-﻿<ul class="navbar-nav">
-    <li>
-        <a id="notifications" class="fa fa-bell">
-            <span id="notifications-number" class="num"></span>
-        </a>
-    </li>
-    <li>
-        <div class="notification-dialog">
-            <div class="dialog-title">INBOX</div>
-            <ul class="dialog-content">
-                <li class="notification-area">
-                    <div class="notification-header">
-                        <span class="notification-type">welcome</span>
-                        <span class="notification-time">Dec 18 '17 at 2:53</span>
-                    </div>
-                    <div class="notification-content">
-                        <a href="#">
-                            The jQuery after() method inserts content AFTER the selected HTML elements.
-                        </a>
-                    </div>
-                </li>
-                <li class="notification-area">
-                    <div class="notification-header">
-                        <span class="notification-type">welcome</span>
-                        <span class="notification-time">Dec 18 '17 at 2:53</span>
-                    </div>
-                    <div class="notification-content">
-                        <a href="#">
-                            The jQuery after() method inserts content AFTER the selected HTML elements.
-                        </a>
-                    </div>
-                </li>
-                <li class="notification-area">
-                    <div class="notification-header">
-                        <span class="notification-type">welcome</span>
-                        <span class="notification-time">Dec 18 '17 at 2:53</span>
-                    </div>
-                    <div class="notification-content">
-                        <a href="#">
-                            The jQuery after() method inserts content AFTER the selected HTML elements.
-                        </a>
-                    </div>
-                </li>
-                <li class="notification-area">
-                    <div class="notification-header">
-                        <span class="notification-type">welcome</span>
-                        <span class="notification-time">Dec 18 '17 at 2:53</span>
-                    </div>
-                    <div class="notification-content">
-                        <a href="#">
-                            The jQuery after() method inserts content AFTER the selected HTML elements.
-                        </a>
-                    </div>
-                </li>
-                <li class="notification-area">
-                    <div class="notification-header">
-                        <span class="notification-type">welcome</span>
-                        <span class="notification-time">Dec 18 '17 at 2:53</span>
-                    </div>
-                    <div class="notification-content">
-                        <a href="#">
-                            The jQuery after() method inserts content AFTER the selected HTML elements.
-                        </a>
-                    </div>
-                </li>
-                <li class="notification-area">
-                    <div class="notification-header">
-                        <span class="notification-type">welcome</span>
-                        <span class="notification-time">Dec 18 '17 at 2:53</span>
-                    </div>
-                    <div class="notification-content">
-                        <a href="#">
-                            The jQuery after() method inserts content AFTER the selected HTML elements.
-                        </a>
-                    </div>
-                </li>
-                <li class="notification-area dialog-footer">
-                    <a href="#">See all inbox messages</a>
-                </li>
-            </ul>
-        </div>
-    </li>
-</ul>
+﻿<li class="nav-item">
+    <a id="notifications" class="fa fa-bell mr-3">
+        <span id="notifications-number" class="num"></span>
+    </a>
+    <div class="notification-dialog">
+        <div class="dialog-title">INBOX</div>
+        <ul class="dialog-content">
+        </ul>
+    </div>
+</li>
