--- a/Job Portal System/Pages/Shared/_Layout.cshtml
+++ b/Job Portal System/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Job Portal System</title>
+    <title>@ViewData["Title"] - handshake</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -23,9 +23,17 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-main border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Job Portal System</a>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-main border-bottom box-shadow mb-3"
+             style="height: 55px">
+            <div class="nav-container">
+                <a class="navbar-brand" asp-area="" asp-page="/Index">
+                    <div class="d-flex" style="align-items: center">
+                        <div style="font-size:larger">
+                            <i class="fa fa-handshake"></i> 
+                        </div>
+                        <div class="pl-2">handshake</div>
+                    </div>
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,9 +43,6 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
@@ -53,7 +58,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Job Portal System - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2019 - handshake - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
