--- a/Job Portal System/Pages/Shared/_LoginPartial.cshtml
+++ b/Job Portal System/Pages/Shared/_LoginPartial.cshtml
@@ -2,33 +2,67 @@
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <partial name="_NotificationPartial"/>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserAsync(User).Result.FirstName!</a>
-    </li>
-    <li class="nav-item">
-        <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" 
-              asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item dropdown">
-        <a class="nav-link text-dark dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Register
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/JobSeeker/Register">As job seeker</a>
-            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Recruiter/Register">As recruiter</a>
-        </div>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <partial name="_NotificationPartial" />
+
+        <li class="nav-item">
+            <div class="profile-toggle">
+                <a class="dropdown-toggle" href="#" id="profile-toggle"
+                   role="button" data-toggle="dropdown" aria-expanded="false">
+                    <div class="profile-image-container">
+                        <img src="@user.Image" alt="" />
+                    </div>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="profile-toggle">
+                    <div class="p-4">
+                        <div class="d-flex">
+                            <img class="circle" src="@user.Image" alt="" width="100" height="100">
+                            <div class="d-flex flex-column pl-4 py-2 sm-info">
+                                <div>
+                                    <div class="font-weight-bold">@($"{user.FirstName} {user.LastName}")</div>
+                                    <div class="text-muted">@user.Email</div>
+                                </div>
+                                <div class="d-flex mt-auto" style="width: 200px">
+                                    <a class="btn-s" asp-area="Identity" asp-page="/Account/Manage/Index"><i class="fa fa-user-cog"></i> Manage</a>
+                                    <form class="form-inline ml-auto" asp-area="Identity" asp-page="/Account/Logout"
+                                          asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
+                                        <button type="submit" class="btn-s"><i class="fa fa-sign-out-alt"></i> Sign out</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
+        @*<li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserAsync(User).Result.FirstName!</a>
+            </li>
+            <li class="nav-item">
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
+                      asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
+                    <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                </form>
+            </li>*@
+    }
+    else
+    {
+        <li class="nav-item dropdown">
+            <a class="nav-link text-dark dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Register
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/JobSeeker/Register">As job seeker</a>
+                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Recruiter/Register">As recruiter</a>
+            </div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+    }
 </ul>
